--- a/src/app/components/primary-input/primary-input.component.html
+++ b/src/app/components/primary-input/primary-input.component.html
@@ -1,4 +1,4 @@
-<div class="input-wrapper">
+<div class="input-wrapper" [formGroup]="formGroup">
     <label [for]="formName">{{ label }}</label>
     <div class="input-content">
         <input [type]="type" [formControlName]="formName" [placeholder]="placeholder">
