:sparkles: feat: adicionar estilo ao componente de entrada primária e aprimorar layout do formulário de login

--- a/src/app/components/primary-input/primary-input.component.scss
+++ b/src/app/components/primary-input/primary-input.component.scss
@@ -5,6 +5,10 @@
     font-size: 16px;
     text-align: start;
 
+    label{
+        margin-bottom: 5px;
+    }
+
     .input-content {
         display: flex;
         width: 100%;
