--- a/src/app/components/primary-input/primary-input.component.html
+++ b/src/app/components/primary-input/primary-input.component.html
@@ -1,7 +1,11 @@
-<div class="input-wrapper" [formGroup]="formGroup">
-    <label [for]="formName">{{ label }}</label>
+<div class="input-wrapper" >
+    <label [for]="inputName">{{ label }}</label>
     <div class="input-content">
-        <input [type]="type" [formControlName]="formName" [placeholder]="placeholder">
+        <input [type]="type" 
+        [placeholder]="placeholder"
+        [value]="value"
+        (input)="onInput($event)"
+        >
 
         <div class="icon">
             <ng-content ></ng-content>
