--- a/src/app/page/login/login.component.scss
+++ b/src/app/page/login/login.component.scss
@@ -1,6 +1,24 @@
+@import "../../../styles/variables.scss";
+
 form{
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    margin-bottom: 34px;
+
+    span{
+        font-size: 14px;
+        font-weight: 400;
+        a{
+            color: $secondary-color;
+        }
+
+        &:hover{
+            a{
+                color: $primary-color;
+            }
+        }
+    }
 }
