--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #7001FD;
-$text-color: #1E2772;
-$secondary-color: #555555;
+$text-color: #555555;
+$secondary-color: #1E2772;
 $gray-bg: #C2C2C2;
 $gray-secondary-bg: #F1F3F6;
