--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -7,7 +7,10 @@
         <ng-content></ng-content>
 
         <div class="btn-wrapper d-flex flex-column align-items-center justify-content-center w-100">
-            <button class="button-primary" (click)="submit()">{{primaryBtnText}}</button>
+            <button class="button-primary" 
+            (click)="submit()"
+            [disabled]="disablePrimaryBtn"
+            >{{primaryBtnText}}</button>
     
             <div class="divider d-flex flex-row align-items-center justify-content-center">
                 <div></div>
