--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -30,6 +30,10 @@ main{
                 background-color: transparent;
                 padding: 12px;
                 cursor: pointer;
+
+                &:disabled{
+                    opacity: .5;
+                }
     
                 &.button-primary{
                     background-color: $primary-color;
