--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -4,6 +4,7 @@
     secondaryBtnText="Signed Up Now"
     (submit)="submit()"
     (navigate)="navigate()"
+    [disablePrimaryBtn]="!loginForm.valid"
 >
     <form [formGroup]="loginForm">
         <app-primary-input
