:lipstick: style: atualizar rotas e melhorar layout responsivo do componente de login

--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,4 +1,4 @@
-<main class="d-flex flex-row align-items-center justify-content-center">
+<main class="d-flex flex-md-row flex-column-reverse align-items-center justify-content-center box-img ">
 
     <section class="form-section d-flex flex-column align-items-center justify-content-center">
         <img src="assets/svg/logo.svg" alt="">
