--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -2,13 +2,24 @@
 
 main{
     height: 100%;
-    section{
+
+    @media screen and (max-width: 767px) {
+        height: auto;
+    }
+
+    >section{
         height: 100%;
+        
     }
 
     .form-section{
         flex-grow: 0.3;
         padding: 0 2rem;
+
+        @media screen and (max-width: 767px) {
+            width: 100%;
+            margin: 3rem 0;
+        }
 
         img{
             margin-bottom: 30px;
@@ -71,5 +82,21 @@ main{
         gap: 8px;
         flex-grow: 1;
         background-color: $gray-bg;
+        @media screen and (max-width: 767px) {
+            width: 100%;
+            padding: 2rem 0;
+        }
+
+        img{
+            @media screen and (max-width: 991px) {
+                width: 410px;
+            }
+
+
+            @media screen and (max-width: 575px) {
+                width: 300px;
+            }
+
+        }
     }
 }
